Adding the first stalizations to the header mobile hero

--- a/Orlando-city/index.html
+++ b/Orlando-city/index.html
@@ -3,12 +3,26 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Orlando city Projectt</title>
+    <title>Orlando city Project</title>
     <link rel="stylesheet" href="assets/css/style.css" type="text/css" /> 
 </head>
 
 <body>
     
+    <div id ="hero">
+        <header>
+            <!-- Criando um botão clicável para a logo da pag -->
+            <a href="/">
+                <img src="assets/img/Orlando-City-Logo.svg" alt="Logo Orlando City"/>
+            </a>
+
+            <!-- Criando um botão para o icon de menu, controlado por javascript -->
+            <button type="button" class="btn-menu">
+                <img src="assets/img/Icon-Menu.svg" alt="Icone Menu"/>
+            </button>
+            
+        </header>
+    </div>
     <script src="assets/js/script.js" > </script>
 </body>
 
