feat: adding the mobile hero

--- a/Orlando-city/index.html
+++ b/Orlando-city/index.html
@@ -47,6 +47,19 @@
             </div>
 
         </header>
+
+        <!-- Section com o conteúdo principal -->
+        <section>
+            <div>
+                <h1> Your Dream is our Motivation!</h1> 
+                <p>Play like a pro and get your degree. This is College SportsWelcome to the place to achieve your dream of studying and playing at an American university.</p>
+                <!-- div para os botões -->
+                <div class="buttons">
+                    <button class="btn-primary-fill" type="button">Change your life now!</button>
+                    <button class="btn-white-10" type="button">Qualify for a scholarship</button>
+                </div>
+            </div>
+        </section>
     </div>
     <script src="assets/js/script.js" > </script>
 </body>
