feat: adding the drawer

--- a/Orlando-city/index.html
+++ b/Orlando-city/index.html
@@ -8,6 +8,12 @@
 </head>
 
 <body>
+
+    <!-- barra de menu -->
+    <div id="drawer" class="opened">
+        <div class="overlay"></div>
+        <div class="body"></div>
+    </div>
     
     <div id ="hero">
         <header>
